// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EzLayout should render with a split layout 1`] = `
.recipe-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.recipe-0 > *:not(:first-child) {
  margin-left: 0.75rem;
}

<div
  className="recipe-0 recipe-1"
>
  <div>
    Content
  </div>
  <div>
    Content
  </div>
</div>
`;

exports[`EzLayout should render with default styles 1`] = `
.recipe-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.recipe-0 > *:not(:first-child) {
  margin-left: 0.75rem;
}

<div
  className="recipe-0 recipe-1"
>
  <div>
    Content
  </div>
  <div>
    Content
  </div>
</div>
`;

exports[`EzLayout should render with equally sized content 1`] = `
.recipe-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.recipe-0 > * {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.recipe-0 > *:not(:first-child) {
  margin-left: 0.75rem;
}

<div
  className="recipe-0 recipe-1"
>
  <div>
    Content
  </div>
  <div>
    Content
  </div>
</div>
`;

exports[`EzLayout should render with right aligned content 1`] = `
.recipe-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.recipe-0 > *:not(:first-child) {
  margin-left: 0.75rem;
}

<div
  className="recipe-0 recipe-1"
>
  <div>
    Content
  </div>
  <div>
    Content
  </div>
</div>
`;
